# homm3_hota_map_searcher

./: .gitignore  LICENSE  README.md  alembic.ini  h3map.spec  pyproject.toml  setup.py  test_gui.py
.github/workflows/: main.yml
h3map/: Theme.qml  asyncFunc.py  cli.py  controller.py  filter.py  gui.py  h3map.py  h3map.pyproject  h3map.spec  h3map_v1_downgrade.sql  h3map_v1_upgrade.sql  heroes3.py  main.py  main.qml  main.spec  parser.py  rc.py  requirements.txt  resources.qrc  test_h3map.py
h3map/_QmlComponents/: MapListView.qml  PySortFilterList.qml  PySortFilterModel.qml
h3map/_reference_maps/: Underground Rebellion.h3m
h3map/discover_maps_on_websites/: DiscoverMapsOnWebsitesView.qml  discover_maps_on_websites.py  maps4heroes.py  remote_map_loader.py
h3map/filtering/: Filter.qml  FilterBar.qml  FilterBarMock.qml  FilterComboCheckBox.qml  FilterOption.qml  _filter_mock.py  filter.py  map_sizes_count.sql
h3map/gui/: ImportMaps.py  _historicalShowJonas.py  asyncFunc.py  gui.py  h3map.pyproject  library.py  main.py  main.qml  menubar.py  resources.qrc
h3map/header/: AbReader.py  HotaReader.py  MapReader.py  Reader.py  RoeReader.py  SodReader.py  WogReader.py  __init__.py  ab_reader.py  conditions.py  constants.py  heroes.py  hota_reader.py  map_reader.py  metadata.py  models.py  players.py  roe_reader.py  sod_reader.py  teams.py  versions.py  wog_reader.py
h3map/heroes3map/: loss_conditions.py  models.py  test.py  transformations.py  winning_conditions.py
h3map/reference_maps/: ur.h3m
h3map/rest/: app.py
migrations/: env.py  test.py
(+87 files in other folders)
