[tool.poetry]
name = "h3map"
version = "0.1.0"
description = "A map cataloguer for Heroes of Might and Magic 3"
authors = ["Alessio Eberl"]
license = "MIT"

[tool.poetry.scripts]
h3map = 'h3map.main:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
click="7.1.2"
pillow=">=8.0.1"
numpy="1.19.4"
pip="20.2.4"
wheel="0.35.1"
colorama="0.4.4"
unidecode="1.1.1"
tabulate="0.8.7"
ttkthemes="3.2.0"
setuptools="50.3.1"
cli-ui = "^0.14.1"
pyinstaller = "^4.4"
PySide2 = "^5.15.2"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
ttkbootstrap = "^0.5.2"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
qasync = "^0.22.0"
chardet = "^4.0.0"
alembic = "^1.7.5"
kaitaistruct = "^0.9"

[tool.poetry.dev-dependencies]
click="7.1.2"
pillow=">=8.0.1"
numpy="1.19.4"
pip="20.2.4"
wheel="0.35.1"
colorama="0.4.4"
unidecode="1.1.1"
tabulate="0.8.7"
ttkthemes="3.2.0"
setuptools="50.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
